--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,1 @@
-{"short_name":"Ishaan Bharal","name":"Ishaan Bharal's Resume","icons":[{"src":"/assets/img/favicon.png","type":"image/png","sizes":"1200x1552"},{"src":"/assets/img/favicon.png","type":"image/png","sizes":"1200x1552"}],"display":"fullscreen","orientation":"portrait"}
+{"short_name":"Ishaan Bharal","name":"Ishaan Bharal's Resume","icons":[{"src":"/assets/img/favicon.png","type":"image/png","sizes":"1200x1552"},{"src":"/assets/img/favicon.png","type":"image/png","sizes":"1200x1552"}],"display":"minimal-ui","orientation":"portrait"}
